# two_center_integral

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: conda.yml  wheels.yml
conda.recipe/: meta.yaml
src/: MyClass.cpp  MyClass.h  MyClassWrapper.h  main.cpp  math_sphbes.cpp  math_sphbes.h  numerical_radial.cpp  numerical_radial.h  testm.cpp  testm.h
src/two_center_integral/: __init__.py
tests/: test_basic.py
